--- a/tests/dummy/app/application/template.hbs
+++ b/tests/dummy/app/application/template.hbs
@@ -8,6 +8,7 @@
           ui=(json uiString)
           env=(json envString)
           componentMap=componentMap
+          wrapper=(component 'sample-wrapper')
           as |error|
         }}
           Error: {{error.message}}
