--- a/tests/dummy/app/components/sample-wrapper/template.hbs
+++ b/tests/dummy/app/components/sample-wrapper/template.hbs
@@ -1,4 +1,4 @@
-{{#if spec.componentMeta.isUserInput}}
+{{#if componentSpec.meta.isUserInput}}
   {{!-- do something specific to user inputs here --}}
 {{/if}}
 {{yield}}
