componentMeta and wrapper (#5)
* Introduce environment field metadata

* onchange action on exclaim-ui component

* pr feedback

* readme

* param name change

* componentMeta and wrapper component support

* pr feedback

* pr feedback

* note on env objects

* rename sample component meta key

* glossary and tagname changes

--- a/addon/components/exclaim-component/template.hbs
+++ b/addon/components/exclaim-component/template.hbs
@@ -1,7 +1,13 @@
-{{#component spec.path
-  config=resolvedConfig
+{{#component wrapper
+  componentSpec=unwrappedSpec
   env=effectiveEnv
-  as |spec overrideEnv|
+  config=resolvedConfig
 }}
-	{{~exclaim-component spec=spec env=effectiveEnv overrideEnv=overrideEnv~}}
+  {{#component componentSpec.path
+    config=resolvedConfig
+    env=effectiveEnv
+    as |componentSpec overrideEnv|
+  }}
+    {{~exclaim-component componentSpec=componentSpec env=effectiveEnv overrideEnv=overrideEnv wrapper=wrapper~}}
+  {{/component}}
 {{/component}}
