--- a/addon/components/exclaim-ui/template.hbs
+++ b/addon/components/exclaim-ui/template.hbs
@@ -1,5 +1,5 @@
-{{#if content.spec}}
-  {{~exclaim-component spec=content.spec env=baseEnv~}}
+{{#if content.componentSpec}}
+  {{~exclaim-component componentSpec=content.componentSpec env=baseEnv wrapper=(or wrapper 'exclaim-default-component-wrapper')~}}
 {{else if content.error}}
   {{~yield content.error~}}
 {{/if}}
