--- a/tests/dummy/app/components/json-editor/template.hbs
+++ b/tests/dummy/app/components/json-editor/template.hbs
@@ -1,5 +1,7 @@
 {{ember-ace
   class=class
+  local-class='outer'
+  editorClass=(local-class 'inner')
   theme='ace/theme/chrome'
   mode='ace/mode/json'
   showPrintMargin=false
