Remove undocumented dependency on ember-truth-helpers

--- a/addon/components/exclaim-ui/template.hbs
+++ b/addon/components/exclaim-ui/template.hbs
@@ -1,5 +1,5 @@
 {{#if content.componentSpec}}
-  {{~exclaim-component componentSpec=content.componentSpec env=baseEnv wrapper=(or wrapper 'exclaim-default-component-wrapper')~}}
+  {{~exclaim-component componentSpec=content.componentSpec env=baseEnv wrapper=wrapperComponentName~}}
 {{else if content.error}}
   {{~yield content.error~}}
 {{/if}}
