--- a/tests/dummy/app/components/exclaim-components/checkbox/template.hbs
+++ b/tests/dummy/app/components/exclaim-components/checkbox/template.hbs
@@ -1,5 +1,7 @@
+{{! template-lint-disable no-action require-input-label }}
+
 <input
-  type="checkbox"
-  checked={{config.checked}}
-  onchange={{action (mut config.checked) value='target.checked'}}
->
+  type='checkbox'
+  checked={{@config.checked}}
+  onchange={{action (mut @config.checked) value='target.checked'}}
+/>
