--- a/tests/dummy/app/components/exclaim-components/input/template.hbs
+++ b/tests/dummy/app/components/exclaim-components/input/template.hbs
@@ -1,6 +1,8 @@
+{{! template-lint-disable require-input-label no-action }}
+
 <input
-  type={{type}}
-  placeholder={{config.placeholder}}
-  value={{config.value}}
-  oninput={{action (mut config.value) value='target.value'}}
->
+  type={{this.type}}
+  placeholder={{@config.placeholder}}
+  value={{@config.value}}
+  oninput={{action (mut @config.value) value='target.value'}}
+/>
