--- a/tests/dummy/app/components/json-editor/template.hbs
+++ b/tests/dummy/app/components/json-editor/template.hbs
@@ -1,10 +1,12 @@
+{{! template-lint-disable no-action }}
+
 {{ember-ace
-  class=class
+  class=@class
   local-class='outer'
   editorClass=(local-class 'inner')
   theme='ace/theme/chrome'
   mode='ace/mode/json'
   showPrintMargin=false
-  value=string
-  update=(action valueChanged)
+  value=this.string
+  update=(action this.valueChanged)
 }}
