Many events bubble, template-lint.

--- a/tests/dummy/app/example/template.hbs
+++ b/tests/dummy/app/example/template.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable no-invalid-interactive }}
 <div local-class='example' {{on 'keypress' this.handleSave}}>
   <div local-class='panel'>
     <div local-class='panel-header'>UI Definition</div>
