--- a/playground-app/app/components/json-editor/template.hbs
+++ b/playground-app/app/components/json-editor/template.hbs
@@ -1,12 +1,11 @@
-{{! template-lint-disable no-action }}
-
-{{ember-ace
-  class=@class
-  local-class='outer'
-  editorClass=(local-class 'inner')
-  theme='ace/theme/chrome'
-  mode='ace/mode/json'
-  showPrintMargin=false
-  value=this.string
-  update=(action this.valueChanged)
-}}
+<AceEditor
+  ...attributes
+  local-class="editor"
+  @value={{this.string}}
+  @update={{this.valueChanged}}
+  @options={{hash
+    theme="ace/theme/chrome"
+    mode="ace/mode/json"
+    showPrintMargin=false
+  }}
+/>
