--- a/playground-app/app/components/exclaim-components/each/template.hbs
+++ b/playground-app/app/components/exclaim-components/each/template.hbs
@@ -1,3 +1,3 @@
-{{#each this.items as |env|}}
-  {{yield @config.do env}}
+{{#each @config.items as |item|}}
+  {{yield @config.do (this.singletonHash @config.yield item)}}
 {{/each}}
