--- a/ember-exclaim/src/components/exclaim-ui.hbs
+++ b/ember-exclaim/src/components/exclaim-ui.hbs
@@ -1,9 +1,9 @@
-{{#if this.content.componentSpec}}
-  {{~exclaim-component
-    componentSpec=this.content.componentSpec
-    env=this.baseEnv
-    wrapper=this.wrapperComponentName
-  ~}}
-{{else if this.content.error}}
-  {{~yield this.content.error~}}
-{{/if}}
+{{#if this.content.componentSpec~}}
+  <ExclaimComponent
+    @componentSpec={{this.content.componentSpec}}
+    @env={{this.baseEnv}}
+    @wrapper={{this.wrapperComponentName}}
+  />
+{{~else if this.content.error~}}
+  {{yield this.content.error}}
+{{~/if}}
