Use classic reactivity in the playground for now

--- a/playground-app/app/example/template.hbs
+++ b/playground-app/app/example/template.hbs
@@ -26,6 +26,7 @@
       @ui={{json (or this.ui "{}")}}
       @env={{json (or this.env "{}")}}
       @implementationMap={{this.implementationMap}}
+      @useClassicReactivity={{true}}
       local-class="result card"
       as |error|
     >
