--- a/playground-app/app/index/template.hbs
+++ b/playground-app/app/index/template.hbs
@@ -39,6 +39,7 @@
         env=(json this.envString)
         implementationMap=this.implementationMap
         wrapper=(component 'sample-wrapper')
+        useClassicReactivity=true
         as |error|
       }}
         Error:
