Modernize playground-app Exclaim implementations

--- a/playground-app/app/components/exclaim-components/table.hbs
+++ b/playground-app/app/components/exclaim-components/table.hbs
@@ -13,7 +13,7 @@
     {{#each @config.items as |item|}}
       <tr>
         {{#each @config.row as |cell|}}
-          <td>{{yield cell (this.singletonHash @config.yield item)}}</td>
+          <td>{{yield cell (singleton-hash @config.yield item)}}</td>
         {{/each}}
       </tr>
     {{/each}}
