Modernize playground-app itself

--- a/playground-app/app/components/json-editor.hbs
+++ b/playground-app/app/components/json-editor.hbs
@@ -1,7 +1,7 @@
 <AceEditor
   ...attributes
   local-class="editor"
-  @value={{this.string}}
+  @value={{@string}}
   @update={{this.valueChanged}}
   @options={{hash
     theme="ace/theme/chrome"
