Modernize components and prepare for v2 (#61)
* Add type declarations for public APIs

* Clean up `implementationMap` inconsistencies

* Modernize Exclaim components

* Officially deprecate `unwrap`

* Modernize playground-app Exclaim implementations

* Modernize playground-app itself

* Update README and GLOSSARY

* Add v1 -> v2 migration notes to the README

* Turn on `embroider-optimized`?

* Don't rely on `@cached`

* Re-add missing `Environment` type

* Ensure whitespace is always trimmed

* Add undeclared `@glimmer` dependencies

--- a/ember-exclaim/src/components/exclaim-component.hbs
+++ b/ember-exclaim/src/components/exclaim-component.hbs
@@ -1,20 +1,22 @@
-{{#component
-  @wrapper
-  componentSpec=@componentSpec
-  env=this.effectiveEnv
-  config=this.resolvedConfig
-}}
-  {{#component
-    @componentSpec.component
-    config=this.resolvedConfig
-    env=this.effectiveEnv
-    as |componentSpec overrideEnv|
-  ~}}
-    <ExclaimComponent 
+<@wrapper
+  @componentSpec={{@componentSpec}}
+  @env={{this.componentData.env}}
+  @config={{this.componentData.config}}
+>
+  {{~null~}}
+  <@componentSpec.component
+    @config={{this.componentData.config}}
+    @env={{this.componentData.env}}
+    as |componentSpec additionalEnvData|
+  >
+    {{~null~}}
+    <ExclaimComponent
       @componentSpec={{componentSpec}}
-      @env={{this.effectiveEnv}}
-      @overrideEnv={{overrideEnv}}
+      @env={{this.componentData.env}}
+      @additionalEnvData={{additionalEnvData}}
       @wrapper={{@wrapper}}
     />
-  {{~/component}}
-{{/component}}
+    {{~null~}}
+  </@componentSpec.component>
+  {{~null~}}
+</@wrapper>
